trunk/Archive2/0e/7cac12b957098e/main.cpp
#include <cstddef>
 
int principal ( ) 
{ 
    const std :: size_t N =  100 ; 
    int * a = nueva int [ N ] ;
 
    para  ( std :: size_t n =  0 ; n < N ;  ++ n ) 
        un [ n ]  = n ;
 
    eliminar [ ] una ; 
}